# SMARTING

./: CMakeLists.txt  README.md  ca_key.pem  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  OTA.c  OTA.h  i2c_simple_main.c  i2c_simple_main.h  main.c  twai.c  twai.h  twai_rectificadores.c  twai_rectificadores.h
schematic/SMARTING/: SMARTING.PrjPcb  SMARTING.PrjPcbStructure  Sheet1.SchDoc  comunicacion.SchDoc  esp32_ethernet1.SchDoc
schematic/SMARTING/__Previews/: ESP32_ETHERNET.SchDocPreview  Sheet1.SchDocPreview  comunicacion.SchDocPreview  esp32_ethernet1.SchDocPreview
server_certs/: ca_cert.pem
smarting/: CMakeLists.txt
